--- a/index.html
+++ b/index.html
@@ -11,10 +11,73 @@
         <img src="./IMG/logo.png" alt="">
         <nav class="menu">
             <ul class="menu-links">
-                <li><a href="#cardapio">CARDÀPIO</a></li>
+                <li><a href="#cardapioid">CARDÀPIO</a></li>
                 <li><a href="http://wa.me/5515991942055" target="_blank">PEÇA PELO WHATSAPP</a></li>
             </ul>
         </nav>
     </header>
+    <section class="banner">
+        <div class="coluna">
+            <p>O verdadeiro sabor da cozinha japonesa</p>
+            <p><a class="botao" href="#cardapioid"> VEJA O CARDÁPIO</a></p>
+        </div>
+        <div class="coluna">
+            <img src="./IMG/banner.png" alt="Prato">
+        </div>
+        </section>
+        <section class="cardapio"id="cardapioid">
+            <h1>Cardápio</h1>
+            <div class="cardapio-categoria">
+                Sushi & SashimiS
+            </div>
+            <div class="cardapio-item">
+                <div class="cardapio-nome">Combinado Sushi</div>
+                <div class="cardapio-preco">R$ 99,00</div>
+                <div class="cardapio-descricao">10 Sashimis Variados, 10 uramakis Filadélfia e 10 uramakis</div>
+            </div>
+            <div class="cardapio-item">
+                <div class="cardapio-nome">Combinado Hot</div>
+                <div class="cardapio-preco">R$ 99,00</div>
+                <div class="cardapio-descricao">1 temaki Filadélfia Médio, 10 uramakis Filadélfia e 10 hot Filadélfia</div>
+            </div>
+            <div class="cardapio-item">
+                <div class="cardapio-nome">Combinado Sushi</div>
+                <div class="cardapio-preco">R$ 115,00</div>
+                <div class="cardapio-descricao">10 Sashimis Variados, 10 uramakis Filadélfia e 10 Uramakis</div>
+            </div>
+            <div class="cardapio-item">
+                <div class="cardapio-nome">Combinado Hot</div>
+                <div class="cardapio-preco">R$ 120,00</div>
+                <div class="cardapio-descricao">1 temaki Filadélfia Médio, 10 uramakis Filadélfia e 10 hot Filadélfia</div>
+            </div>
+            <div class="cardapio-categoria">
+                Bebidas
+            </div>
+            <div class="cardapio-item">
+                <div class="cardapio-nome">Refrigerante</div>
+                <div class="cardapio-preco"> R$ 8,00</div>
+                <div class="cardapio-descricao">Lata (coca-cola , guaraná)</div>
+            </div>
+            <div class="cardapio-item">
+                <div class="cardapio-nome">Aguá</div>
+                <div class="cardapio-preco"> R$ 4,00</div>
+                <div class="cardapio-descricao">garrafa 500ml</div>
+                </div>
+                <div class="cardapio-item">
+                    <div class="cardapio-nome">Cerveja</div>
+                    <div class="cardapio-preco">R$ 14,00</div>
+                    <div class="cardapio-descricao">Heineken</div>
+                    </div>
+        </section>
+        <footer>
+            <h3>Haruy Shusi</h3>
+            <p>Rua Prof. Toledo, 500, centro - Sorocaba</p>
+            <p>WhatsApp: (15) 99194-2055</p>
+            <p>Aberto todos os dias das 14h às 23h</p>
+        </footer>
+        <a class="linkwhatsapp"href="http://wa.me/5515991942055" target="_blank">
+            <img src="./IMG/whatsapp.png" alt="">
+        </a>
+
 </body>
 </html>
